--- a/helloworldmaven/helloworldmvc.main/pom.xml
+++ b/helloworldmaven/helloworldmvc.main/pom.xml
@@ -38,4 +38,31 @@
     	<version>0.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
+  
+  
+  <build>
+   <plugins>
+    <plugin>
+     <groupId>org.apache.maven.plugins</groupId>
+     <artifactId>maven-shade-plugin</artifactId>
+     <version>3.0.0</version>
+     <executions>
+      <execution>
+       <phase>package</phase>
+       <goals>
+        <goal>shade</goal>
+       </goals>
+       <configuration>
+        <transformers>
+         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+          <mainClass>helloworldmvc.main.Main</mainClass>
+         </transformer>
+        </transformers>
+       </configuration>
+      </execution>
+     </executions>
+    </plugin>
+   </plugins>
+  </build>
+  
 </project>
